--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,52 +14,62 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <ImageView
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_contacts"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@android:drawable/alert_dark_frame" />
+            android:layout_height="match_parent" />
 
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/linear_layout_bottom_sheet"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:background="#20000000"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:clickable="true"
         android:elevation="10dp"
+        android:orientation="vertical"
         app:behavior_hideable="true"
         app:behavior_peekHeight="80dp"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
         <TextView
-            android:id="@+id/text_view_sheet_title"
+            android:layout_marginLeft="16dp"
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/activity_vertical_margin"
-            android:text="Pull to show more"
-            android:textSize="18sp" />
+            android:layout_height="72dp"
+            android:drawableLeft="@drawable/ic_call"
+            android:drawablePadding="16dp"
+            android:text="Call" />
 
         <TextView
-            android:id="@+id/text_view_more_content"
+            android:layout_marginLeft="16dp"
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/text_view_sheet_title"
-            android:paddingLeft="@dimen/activity_vertical_margin"
-            android:paddingRight="@dimen/activity_vertical_margin"
-            android:text="More content to user"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_height="72dp"
+            android:drawableLeft="@drawable/ic_preview"
+            android:drawablePadding="16dp"
+            android:text="Preview" />
 
-        <Button
+        <TextView
+            android:layout_marginLeft="16dp"
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/text_view_more_content"
-            android:layout_marginLeft="@dimen/activity_vertical_margin"
-            android:layout_marginRight="@dimen/activity_vertical_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="Click Me" />
+            android:drawablePadding="16dp"
+            android:layout_height="72dp"
+            android:drawableLeft="@drawable/ic_share"
+            android:text="Share" />
 
-    </RelativeLayout>
+        <TextView
+            android:layout_marginLeft="16dp"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:drawableLeft="@drawable/ic_link"
+            android:text="Get Link" />
+
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
