--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,75 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mayojava.sample.bottomsheetdemo.MainActivity">
+    android:gravity="center"
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:layout_height="72dp"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:layout_marginBottom="16dp"
+        android:onClick="startBehaviorSheetActivity"
+        android:background="#CDDC39"
+        android:text="Behavior Sheet" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_contacts"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/linear_layout_bottom_sheet"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:clickable="true"
-        android:elevation="10dp"
-        android:orientation="vertical"
-        app:behavior_hideable="true"
-        app:behavior_peekHeight="80dp"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+        android:layout_height="72dp"
+        android:gravity= "center"
+        android:textSize="20sp"
+        android:background="#FF5722"
+        android:onClick="startDialogSheetActivity"
+        android:text="Dialog Sheet" />
 
-        <TextView
-            android:layout_marginLeft="16dp"
-            android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:drawableLeft="@drawable/ic_call"
-            android:drawablePadding="16dp"
-            android:text="Call" />
-
-        <TextView
-            android:layout_marginLeft="16dp"
-            android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:drawableLeft="@drawable/ic_preview"
-            android:drawablePadding="16dp"
-            android:text="Preview" />
-
-        <TextView
-            android:layout_marginLeft="16dp"
-            android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:drawablePadding="16dp"
-            android:layout_height="72dp"
-            android:drawableLeft="@drawable/ic_share"
-            android:text="Share" />
-
-        <TextView
-            android:layout_marginLeft="16dp"
-            android:drawablePadding="16dp"
-            android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:drawableLeft="@drawable/ic_link"
-            android:text="Get Link" />
-
-
-    </LinearLayout>
-
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
